--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
     <script>
         function telechargerPDF() {
         const lien = document.createElement("a");
-        lien.href = "D:/Portfolio/luther-1.0.0/images/cv_Stephane Rambeloson.pdf";
+        lien.href = "https://ste4321.github.io/portfolio/images/cv_Stephane Rambeloson.pdf";
         lien.download = "cv_stephane_Rambeloson.pdf";
         document.body.appendChild(lien);
         lien.click();
