--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                 <div class="row about-info wide" data-animate-block>
 
                     <div class="column lg-6 md-12 about-info__pic-block">
-                        <img src="images/Stephane (2).jpg" 
-                             srcset="images/Stephane (2).jpg 1x, images/about-photo@2x.jpg 2x" alt="" class="about-info__pic" data-animate-el>
+                        <img src="https://ste4321.github.io/Portfolio/images/Stephane (2).jpg" 
+                             srcset="https://ste4321.github.io/Portfolio/images/Stephane (2).jpg 1x, https://ste4321.github.io/Portfolio/images/Stephane (2).jpg 2x" alt="" class="about-info__pic" data-animate-el>
                     </div>
 
                     <div class="column lg-6 md-12">
