updt : index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
                         <li><a href="#0">LinkedIn</a></li>
                         <li><a href="#0">WhatsApp</a></li>
                         <li><a href="#0">Facebook</a></li>
-                        <li><a href="#0">Instagram</a></li>
                     </ul>
 
                 </div> <!-- end intro content -->
@@ -468,7 +467,7 @@
                                 </ul>
                             </div>
                 
-                            <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                            <!-- <a href="https://www.behance.net/" class="modal-popup__details">Project link</a> -->
                         </div>
                     </div> <!-- end modal -->
 
@@ -509,7 +508,7 @@
                                 </ul>
                             </div>
                 
-                            <a href="#0" class="modal-popup__details">Project link</a>
+                            <!-- <a href="#0" class="modal-popup__details">Project link</a> -->
                         </div>
                     </div> <!-- end modal -->
 
