--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                                 </ul>
                             </div>
                 
-                            <!-- <a href="https://www.behance.net/" class="modal-popup__details">Project link</a> -->
+                            <a href="https://github.com/ste4321/gestion_livraison" class="modal-popup__details">Project link</a>
                         </div>
                     </div> <!-- end modal -->
 
