--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                                 </ul>
                             </div>
                 
-                            <a href="http://web-test.tsara.tech/" class="modal-popup__details">Project link</a>
+                            <a href="http://www.gstf-faliarivo.ovh/" class="modal-popup__details">Project link</a>
                         </div>
                     </div> <!-- end modal -->
 
