--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                         </div>
 
                         <h1 class="text-huge-title">
-                            Stephane RAMBELOSON <br>
-                            Développeur d'application web.
+                            Stephane Rambeloson <br>
+                            Développeur d'application web <br>et mobile.
                         </h1>
                     </div>
 
@@ -150,7 +150,8 @@
                             <li>JavaScript</li>
                             <li>Codigneter</li>
                             <li>Laravel</li>
-                            <li>React + vite</li>
+                            <li>ReactJs</li>
+                            <li>React Native</li>
                             <li>Postgresql</li>
                             <li>GitHub</li>
                             <li>WordPress</li>
@@ -538,7 +539,7 @@
                 
                             <div class="modal-popup__desc">
                                 <h5>Grand Séminaire de Théologie à Faliarivo</h5>
-                                <p>Réaliser avec React et Laravel</p>
+                                <p>Réaliser avec ReactJs</p>
                                 <ul class="modal-popup__cat">
                                     <li>En cours de construction</li>
                                     <li>Et en contribution avec l'entreprise Ts@ra-Tech</li>
