updt:index.html

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                     </div>
 
                     <ul class="intro-social">
-                        <li><a href="#0">LinkedIn</a></li>
-                        <li><a href="#0">WhatsApp</a></li>
-                        <li><a href="#0">Facebook</a></li>
+                        <li><a href="https://www.linkedin.com/in/stephanerambeloson1740/">LinkedIn</a></li>
+                        <li><a href="https://wa.me/261343682741?text=Bonjour,%20que%20puis-je%20faire%20pour%20vous.">WhatsApp</a></li>
+                        <li><a href="https://www.facebook.com/stephane.rambeloson.7">Facebook</a></li>
                     </ul>
 
                 </div> <!-- end intro content -->
@@ -576,18 +576,18 @@
                     <div class="column lg-8 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Contact</h3>
                         <p class="contact-links">
-                            <a href="mailto:sayhello@luther.com" class="mailtoui">sterambeloson29@gmail.com</a> <br>
-                            <a href="tel:+1975432345">+261 34 36 827 41</a>
+                            <a href="mailto:sterambeloson29@gmail.com" class="mailtoui">sterambeloson29@gmail.com</a> <br>
+                            <a href="tel:+261343682741">+261 34 36 827 41</a>
                         </p>
                     </div>
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
-                            <li><a href="#0">LinkedIn</a></li>
-                            <li><a href="#0">WhatsApp</a></li>
-                            <li><a href="#0">Facebook</a></li>
-                            <li><a href="#0">Instagram</a></li>
-                            <li><a href="#0">Github</a></li>
+                            <li><a href="https://www.linkedin.com/in/stephanerambeloson1740/">LinkedIn</a></li>
+                            <li><a href="https://wa.me/261343682741?text=Bonjour,%20que%20puis-je%20faire%20pour%20vous.">WhatsApp</a></li>
+                            <li><a href="https://www.facebook.com/stephane.rambeloson.7">Facebook</a></li>
+                            <li><a href="https://www.instagram.com/stephanerambeloson/">Instagram</a></li>
+                            <li><a href="https://github.com/ste4321">Github</a></li>
                         </ul>
                     </div>
                     <!-- <div class="column lg-4 md-12 contact-block">
@@ -606,7 +606,7 @@
 
             <div class="row">
                 <div class="column ss-copyright">
-                    <span>© Copyright Luther 2021</span> 
+                    <span>© Copyright Stephane Rambeloson 2025</span> 
                     <!-- <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> Distribution By <a href="https://themewagon.com">Themewagon</a></span> -->
                 </div>
 
