updt:index.html

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
                             <li><a href="https://www.linkedin.com/in/stephanerambeloson1740/">LinkedIn</a></li>
-                            <li><a href="https://wa.me/261343682741?text=Bonjour,%20que%20puis-je%20faire%20pour%20vous.">WhatsApp</a></li>
+                            <li><a href="https://wa.me/261343682741?text=Bonjour,%20je%20voudrais%20discuter%20avec%20vous.">WhatsApp</a></li>
                             <li><a href="https://www.facebook.com/stephane.rambeloson.7">Facebook</a></li>
                             <li><a href="https://www.instagram.com/stephanerambeloson/">Instagram</a></li>
                             <li><a href="https://github.com/ste4321">Github</a></li>
