updt:index.html

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                                 </ul>
                             </div>
                 
-                            <a href="http://www.gstf-faliarivo.ovh/" class="modal-popup__details">Project link</a>
+                            <a href="https://gstf-faliarivo.ovh/" class="modal-popup__details">Project link</a>
                         </div>
                     </div> <!-- end modal -->
 
