--- a/index.html
+++ b/index.html
@@ -629,8 +629,8 @@
     <script>
         function telechargerPDF() {
         const lien = document.createElement("a");
-        lien.href = "https://ste4321.github.io/Portfolio/images/cv_Stephane Rambeloson.pdf";
-        lien.download = "cv_stephane_Rambeloson.pdf";
+        lien.href = "https://ste4321.github.io/Portfolio/images/cv_StephaneRambeloson.pdf";
+        lien.download = "cv_stephaneRambeloson.pdf";
         document.body.appendChild(lien);
         lien.click();
         document.body.removeChild(lien);
