--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="folio-list__proj-link" href="#" title="project link">
+                                <!-- <a class="folio-list__proj-link" href="#" title="project link">
                                     <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
-                                </a>
+                                </a> -->
                             </li> <!--end folio-list__item -->
 
                             <li class="folio-list__item column" data-animate-el>
@@ -366,9 +366,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="folio-list__proj-link" href="#" title="project link">
+                                <!-- <a class="folio-list__proj-link" href="#" title="project link">
                                     <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
-                                </a>
+                                </a> -->
                             </li> <!--end folio-list__item -->
 
                             <li class="folio-list__item column" data-animate-el>
@@ -387,9 +387,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="folio-list__proj-link" href="#" title="project link">
+                                <!-- <a class="folio-list__proj-link" href="#" title="project link">
                                     <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
-                                </a>
+                                </a> -->
                             </li> <!--end folio-list__item -->
 
                             <li class="folio-list__item column" data-animate-el>
@@ -408,9 +408,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="folio-list__proj-link" href="#" title="project link">
+                                <!-- <a class="folio-list__proj-link" href="#" title="project link">
                                     <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
-                                </a>
+                                </a> -->
                             </li> <!--end folio-list__item -->
 
                             <li class="folio-list__item column" data-animate-el>
@@ -429,9 +429,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="folio-list__proj-link" href="#" title="project link">
+                                <!-- <a class="folio-list__proj-link" href="#" title="project link">
                                     <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
-                                </a>
+                                </a> -->
                             </li> <!--end folio-list__item -->
 
                         </ul> <!-- end folio-list -->
@@ -538,7 +538,7 @@
                                 <h5>Ekar Mb Anne Anjomakely</h5>
                                 <p>Réaliser avec WordPress et selon la reconmmandation de l'Ekar.</p>
                                 <ul class="modal-popup__cat">
-                                    <li>En cours de construction</li>
+                                    <li>En stand-by</li>
                                     <!-- <li>Product Design</li> -->
                                 </ul>
                             </div>
